# BachelorThesis_PiPicoDebugger

./: Dockerfile  dependencies.xlsx
Project/blink/: CMakeLists.txt  FreeRTOSConfig.h
Project/blink/.cache/clangd/index/: FreeRTOSConfig.h.6ED3FF45E1BF528F.idx  FreeRTOSConfig_examples_common.h.8E0630A2806717E7.idx  blink.c.D902F4D937A0E9F8.idx
Project/template/: CMakeLists.txt  demo_project.c
Project/template/.cache/clangd/index/: FreeRTOSConfig.h.97336081CAAFC0FC.idx  FreeRTOSConfig_examples_common.h.2670A00043823D9E.idx  demo_project.c.AE5988FC0680FBA7.idx
Project/template_project/: CMakeLists.txt  demo_project.c  start_debug.sh
Project/template_rp2040/: CMakeLists.txt  start_debug.sh
Project/template_rp2040/.cache/clangd/index/: FreeRTOSConfig.h.82A2A9EFC28A4455.idx  FreeRTOSConfig_examples_common.h.0CE886E1FE9488D2.idx  demo_project.c.32DBE9BAC722DC08.idx
Project/template_rp2040_2nd_core/: FreeRTOSConfig.h  demo_project.c
Project/template_rp2040_2nd_core/.cache/clangd/index/: FreeRTOSConfig.h.D32716156D17C8FE.idx  FreeRTOSConfig_examples_common.h.00037C5B4F243A31.idx  demo_project.c.5113B7D38EA22AF7.idx  demo_project.c.DB53189681B6C2B2.idx
Project/template_rp2350/: blink.c
codeserver/: Dockerfile  docker-compose.yml
vmvagrant/: Vagrantfile
vmvagrant/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
